--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,9 @@
               <li class="inline-block">
                     <a class="align-middle link-primary header-link mr-2" href="/work/">Work</a>
                   </li>
+                  <li class="inline-block">
+                        <a class="align-middle link-primary header-link mr-2" href="/resume/">Resume</a>
+                      </li>
           </ul>
         </div>
 
