--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,22 +2,106 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  
+    <meta name="description"
+        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+
     {% assign user_url = site.url | append: site.baseurl %}
     {% assign full_base_url = user_url | default: site.github.url %}
     <link rel="stylesheet" href="{{ "/assets/prism.css" | prepend: full_base_url }}">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ "/assets/style.css" | prepend: full_base_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
+        href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+    <script src="{{ site.url }}/assets/prism.js" type="text/javascript"></script>
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:url"                content="{{ site.url }}{{ page.url }}" />
+<meta property="og:type"               content="article" />
+<meta property="og:title"              content="{% if page.PageTitle %}{{ page.PageTitle }}{% else %}{{ page.title }}{%endif%}" />
+<meta property="og:description"        content="{{ page.excerpt }}" />
+<meta property="og:image"              content="{% if page.feature %}{{site.url}}{{ page.feature }}{%else%}{{site.url}}/assets/img/blog.jpg{% endif %}" />
+<meta property="og:image:alt"              content="{% if page.PageTitle %}{{ page.PageTitle }}{% else %}{{ page.title }}{%endif%}" />
+
+<!-- Facebook Tags -->
+{% if site.analytics.facebook %}<meta property="fb:app_id"              content="{{ site.analytics.facebook }}" />{% endif %}
+
+<!-- Twitter Tags -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:creator" content="@{{ site.twitter }}" />
+<meta name="twitter:site" content="@{{ site.twitter }}" />
+<meta name="twitter:title" content="{% if page.PageTitle %}{{ page.PageTitle }}{% else %}{{ page.title }}{%endif%}" />
+<meta name="twitter:description" content="{{ page.excerpt }}" />
+<meta name="twitter:image" content="{{site.url}}{{ page.feature }}" />
+
+<!-- Google Data -->
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "{{ site.url }}{{ page.url }}"
+      },
+      "headline": "{% if page.PageTitle %}{{ page.PageTitle }}{% else %}{{ page.title }}{%endif%}",
+      "image": [
+        "{{site.url}}{{ page.feature }}"
+       ],
+       "datePublished": "{%if page.date %}{{page.date}}{%else%}2017-02-21{%endif%}",
+       "publisher":{
+            "@type": "Organization",
+            "name": "Arcane Reveries",
+            "logo": {
+                "@type": "ImageObject",
+                "url": "{{ site.url }}/favicon.png"
+              }
+       },
+      "author": {
+        "@type": "Person",
+        "name": "{{ site.author }}",
+        "sameAs": [
+            {% if site.email %}"mailto:{{ site.email }}",{% endif %}
+            {% if site.twitter %}"https://twitter.com/{{ site.twitter }}",{% endif %}
+            {% if site.facebook %}"https://facebook.com/{{ site.facebook }}",{% endif %}
+            {% if site.google.plus %}"https://plus.google.com/+{{ site.google.plus }}",{% endif %}
+            {% if site.linkedin %}"https://linkedin.com/in/{{ site.linkedin }}",{% endif %}
+            {% if site.xing %}"https://www.xing.com/profile/{{ site.xing }}",{% endif %}
+            {% if site.instagram %}"https://instagram.com/{{ site.instagram }}",{% endif %}
+            {% if site.tumblr %}"https://{{ site.tumblr }}.tumblr.com",{% endif %}
+            {% if site.github %}"https://github.com/{{ site.github }}",{% endif %}
+            {% if site.stackoverflow %}"https://stackoverflow.com/users/{{ site.stackoverflow }}",{% endif %}
+            {% if site.lastfm %}"https://www.last.fm/user/{{ site.lastfm }}",{% endif %}
+            {% if site.dribbble %}"https://dribbble.com/{{ site.dribbble }}",{% endif %}
+            {% if site.pinterest %}"https://www.pinterest.com/{{ site.pinterest }}",{% endif %}
+            {% if site.foursquare %}"https://foursquare.com/{{ site.foursquare }}",{% endif %}
+            {% if site.steam %}"https://steamcommunity.com/id/{{ site.steam }}",{% endif %}
+            {% if site.youtube %}"https://youtube.com/channel/{{ site.youtube }}",{% endif %}
+            {% if site.soundcloud %}"https://soundcloud.com/{{ site.soundcloud }}",{% endif %}
+            {% if site.weibo %}"https://www.weibo.com/{{ site.weibo }}",{% endif %}
+            {% if site.flickr %}"https://www.flickr.com/{{ site.flickr }}",{% endif %}
+            {% if site.codepen %}"https://codepen.io/{{ site.codepen }}",{% endif %}
+            {% if site.keybase %}"https://keybase.io/{{ site.keybase }}",{% endif %}
+            {% if site.xmpp %}"xmpp:{{ site.xmpp }}",{% endif %}
+            {% if site.spotify %}"https://open.spotify.com/user/{{ site.spotify }}",{% endif %}
+            {% if site.reddit %}"https://www.reddit.com/user/{{ site.reddit }}",{% endif %}
+            {% if site.skype %}"skype:{{ site.skype }}?chat",{% endif %}
+            {% if site.hackernews %}"https://news.ycombinator.com/user?id={{ site.hackernews }}",{% endif %}
+            ""        
+        ]
+      },
+      "description": "{{ page.excerpt }}"
+    }
+    </script>
     
-        <script src="{{ site.url }}/assets/prism.js" type="text/javascript"></script>
-  
-    </head>
+</head>
