--- a/_includes/social.html
+++ b/_includes/social.html
@@ -21,7 +21,7 @@
     {% if site.keybase %}<a  href="https://keybase.io/{{ site.keybase }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-key"></i></a>{% endif %}
         {% if site.xmpp %}<a  href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-lightbulb-o"></i></a>{% endif %}
         {% if site.spotify %}<a  href="https://open.spotify.com/user/{{ site.spotify }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-spotify"></i></a>{% endif %}
-        {% if site.reddit %}<a  href="https://www.reddit.com/user/{{ site.reddit }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-reddit"></i></a>{% endif %}
+        <!-- {% if site.reddit %}<a  href="https://www.reddit.com/user/{{ site.reddit }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-reddit"></i></a>{% endif %} -->
         {% if site.skype %}<a  href="skype:{{ site.skype }}?chat" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-skype"></i></a>{% endif %}
         {% if site.hackernews %}<a  href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-hacker-news"></i></a>{% endif %}
     
