--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,34 +1,60 @@
 <div class="border-top-thin clearfix mt-2 mt-lg-4">
     <div class="container mx-auto px-2">
         <p class="col-12 sm-width-full right py-3 mb-0">
-            
-        {% if site.email %}<a  href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-envelope-square"></i></a>{% endif %}
-        {% if site.twitter %}<a  href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-twitter-square"></i></a>{% endif %}
-        {% if site.facebook %}<a  href="https://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-facebook-square"></i></a>{% endif %}
-        {% if site.google.plus %}<a  href="https://plus.google.com/+{{ site.google.plus }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-google-plus-square"></i></a>{% endif %}
-        {% if site.linkedin %}<a  href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-linkedin-square"></i></a>{% endif %}
-        {% if site.xing %}<a  href="https://www.xing.com/profile/{{ site.xing }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-xing-square"></i></a>{% endif %}
-        {% if site.instagram %}<a  href="https://instagram.com/{{ site.instagram }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-instagram"></i></a>{% endif %}
-        {% if site.tumblr %}<a  href="https://{{ site.tumblr }}.tumblr.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-tumblr-square"></i></a>{% endif %}
-        {% if site.github %}<a  href="https://github.com/{{ site.github }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-github"></i></a>{% endif %}
-        {% if site.stackoverflow %}<a  href="https://stackoverflow.com/users/{{ site.stackoverflow }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-stack-overflow"></i></a>{% endif %}
-        {% if site.lastfm %}<a  href="https://www.last.fm/user/{{ site.lastfm }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-music"></i></a>{% endif %}
-        {% if site.dribbble %}<a  href="https://dribbble.com/{{ site.dribbble }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-dribbble"></i></a>{% endif %}
-        {% if site.pinterest %}<a  href="https://www.pinterest.com/{{ site.pinterest }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-pinterest"></i></a>{% endif %}
-        {% if site.foursquare %}<a  href="https://foursquare.com/{{ site.foursquare }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-foursquare"></i></a>{% endif %}
-        {% if site.steam %}<a  href="https://steamcommunity.com/id/{{ site.steam }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-steam-square"></i></a>{% endif %}
-        {% if site.youtube %}<a  href="https://youtube.com/channel/{{ site.youtube }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-youtube-square"></i></a>{% endif %}
-        {% if site.soundcloud %}<a  href="https://soundcloud.com/{{ site.soundcloud }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-soundcloud"></i></a>{% endif %}
-        {% if site.weibo %}<a  href="https://www.weibo.com/{{ site.weibo }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-weibo"></i></a>{% endif %}
-        {% if site.flickr %}<a  href="https://www.flickr.com/{{ site.flickr }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-flickr"></i></a>{% endif %}
-        {% if site.codepen %}<a  href="https://codepen.io/{{ site.codepen }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-codepen"></i></a>{% endif %}
-    {% if site.keybase %}<a  href="https://keybase.io/{{ site.keybase }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-key"></i></a>{% endif %}
-        {% if site.xmpp %}<a  href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-lightbulb-o"></i></a>{% endif %}
-        {% if site.spotify %}<a  href="https://open.spotify.com/user/{{ site.spotify }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-spotify"></i></a>{% endif %}
-        <!-- {% if site.reddit %}<a  href="https://www.reddit.com/user/{{ site.reddit }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-reddit"></i></a>{% endif %} -->
-        {% if site.skype %}<a  href="skype:{{ site.skype }}?chat" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-skype"></i></a>{% endif %}
-        {% if site.hackernews %}<a  href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-hacker-news"></i></a>{% endif %}
-    
+
+            {% if site.email %}<a href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i
+                    class="fa fa-fw fa-3x fa-envelope-square"></i></a>{% endif %}
+            {% if site.twitter %}<a href="https://twitter.com/{{ site.twitter }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-twitter-square"></i></a>{% endif %}
+            {% if site.facebook %}<a href="https://facebook.com/{{ site.facebook }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-facebook-square"></i></a>{% endif %}
+            {% if site.google.plus %}<a href="https://plus.google.com/+{{ site.google.plus }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-google-plus-square"></i></a>{% endif %}
+            {% if site.linkedin %}<a href="https://linkedin.com/in/{{ site.linkedin }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-linkedin-square"></i></a>{% endif %}
+            {% if site.xing %}<a href="https://www.xing.com/profile/{{ site.xing }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-xing-square"></i></a>{% endif %}
+            {% if site.instagram %}<a href="https://instagram.com/{{ site.instagram }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-instagram"></i></a>{% endif %}
+            {% if site.tumblr %}<a href="https://{{ site.tumblr }}.tumblr.com" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-tumblr-square"></i></a>{% endif %}
+            {% if site.github %}<a href="https://github.com/{{ site.github }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-github"></i></a>{% endif %}
+            {% if site.stackoverflow %}<a href="https://stackoverflow.com/users/{{ site.stackoverflow }}"
+                target="_blank" rel="noopener noreferrer"><i
+                    class="fa fa-fw fa-3x fa-stack-overflow"></i></a>{% endif %}
+            {% if site.lastfm %}<a href="https://www.last.fm/user/{{ site.lastfm }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-music"></i></a>{% endif %}
+            {% if site.dribbble %}<a href="https://dribbble.com/{{ site.dribbble }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-dribbble"></i></a>{% endif %}
+            {% if site.pinterest %}<a href="https://www.pinterest.com/{{ site.pinterest }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-pinterest"></i></a>{% endif %}
+            {% if site.foursquare %}<a href="https://foursquare.com/{{ site.foursquare }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-foursquare"></i></a>{% endif %}
+            {% if site.steam %}<a href="https://steamcommunity.com/id/{{ site.steam }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-steam-square"></i></a>{% endif %}
+            {% if site.youtube %}<a href="https://youtube.com/channel/{{ site.youtube }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-youtube-square"></i></a>{% endif %}
+            {% if site.soundcloud %}<a href="https://soundcloud.com/{{ site.soundcloud }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-soundcloud"></i></a>{% endif %}
+            {% if site.weibo %}<a href="https://www.weibo.com/{{ site.weibo }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-weibo"></i></a>{% endif %}
+            {% if site.flickr %}<a href="https://www.flickr.com/{{ site.flickr }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-flickr"></i></a>{% endif %}
+            {% if site.codepen %}<a href="https://codepen.io/{{ site.codepen }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-codepen"></i></a>{% endif %}
+            {% if site.keybase %}<a href="https://keybase.io/{{ site.keybase }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-key"></i></a>{% endif %}
+            {% if site.xmpp %}<a href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i
+                    class="fa fa-fw fa-3x fa-lightbulb-o"></i></a>{% endif %}
+            {% if site.spotify %}<a href="https://open.spotify.com/user/{{ site.spotify }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-spotify"></i></a>{% endif %}
+            <!-- {% if site.reddit %}<a  href="https://www.reddit.com/user/{{ site.reddit }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-reddit"></i></a>{% endif %} -->
+            {% if site.skype %}<a href="skype:{{ site.skype }}?chat" target="_blank" rel="noopener noreferrer"><i
+                    class="fa fa-fw fa-3x fa-skype"></i></a>{% endif %}
+            {% if site.hackernews %}<a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank"
+                rel="noopener noreferrer"><i class="fa fa-fw fa-3x fa-hacker-news"></i></a>{% endif %}
+
         </p>
         <!-- <ul class="list-reset right clearfix sm-width-full py-2 mb-2 mb-lg-0">
             <li class="inline-block">
@@ -42,12 +68,19 @@
     </div>
 </div>
 
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <script type="text/javascript">
     MathJax.Hub.Config({
         tex2jax: {
-            inlineMath: [ ['$','$'], ['\\(','\\)'] ]
-            }
+            inlineMath: [['$', '$'], ['\\(', '\\)']]
+        }
     });
 </script>
 
@@ -65,3 +98,5 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
         Disqus.</a></noscript>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+<script src="{{ site.url }}/assets/prism.js" type="text/javascript"></script>
