--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,9 @@
                     <li class="inline-block">
                         <a class="align-middle link-primary header-link mr-2" href="/resume/">Resume</a>
                     </li>
+                    <li class="inline-block">
+                        <a class="align-middle link-primary header-link mr-2" href="/tags/">Tags</a>
+                    </li>
                 </ul>
             </div>
 
