--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="container mx-auto px-2 mb-2 clearfix header-text">
-                <h1 class="h0 inline-block col-9 sm-width-full py-4 mt-3 header-title">{{ site.title }}</h1>
+                <h1 class="h0 inline-block col-9 sm-width-full py-4 mt-3 header-title">{{ page.title }}</h1>
 
                 <div class="clearfix mb-4 py-1">
                     <div class="col-6 sm-width-full left border-top-thin">
@@ -45,7 +45,7 @@
                                 {% include dot-accent.html %}
                             </div>
                         </div>
-                        <p class="h4 col-9 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
+                        <!-- <p class="h4 col-9 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p> -->
                     </div>
                 </div>
 
@@ -53,7 +53,7 @@
         </header>
 
         <div class="container mx-auto px-2 py-4">
-            {% for post in site.posts %}
+            {% for post in site.tags[page.tag] %}
             {% include post_block.html %}
             {% endfor %}
         </div>
