--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,6 +48,11 @@
                         <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ page.excerpt }}</p>
                         <p class="mb-3 py-2 bold h4"><time datetime="{{ page.date | date_to_xmlschema }}"
                                 itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
+                        {% assign wpm = site.words_per_minute | append: '.0' %}
+                        {% assign readtime = page.content | strip_html | number_of_words | divided_by:wpm | round %}
+                        <p class="mb-3 py-2 bold h4">
+                                Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
+                        </p>
                     </div>
                 </div>
 
