--- a/_includes/post_block.html
+++ b/_includes/post_block.html
@@ -12,12 +12,12 @@
     <h5>Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}</p>
     <p>{{ post.excerpt | strip_html | truncatewords:50 }}</h5>
     <div  style="overflow: hidden;">
-            <div class="tags" style="white-space: nowrap; overflow-x: auto; overflow-y:hidden; width: 100%; height: 50px">
-                {% for tag in post.tags %}
-                <a href="/tag/{{tag}}"><button class="btn btn-link" style="padding: 5px;">{{tag}}</button></a>
-                {%endfor%}
-            </div>
+        <div class="tags" style="white-space: nowrap; overflow-x: auto; overflow-y:hidden; width: 100%; height: 50px">
+            Tags: {% for tag in post.tags %}
+            <a href="/tag/{{tag}}"><button class="btn btn-link" style="padding: 5px;">{{tag}}</button></a>
+            {%endfor%}
         </div>
+    </div>
     
     <hr style="opacity: 0.1; width:60%">
 </div>
