--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,25 +9,7 @@
 
         <header class="header-background">
 
-            <div class="clearfix border-bottom-thick header-border">
-                <ul class="list-reset right py-1 header-text font-smoothing">
-                    <li class="inline-block">
-                        <a class="align-middle link-primary header-link mr-2" href="/">Home</a>
-                    </li>
-                    <li class="inline-block">
-                        <a class="align-middle link-primary header-link mr-2" href="/about/">About</a>
-                    </li>
-                    <li class="inline-block">
-                        <a class="align-middle link-primary header-link mr-2" href="/work/">Work</a>
-                    </li>
-                    <li class="inline-block">
-                        <a class="align-middle link-primary header-link mr-2" href="/resume/">Resume</a>
-                    </li>
-                    <li class="inline-block">
-                        <a class="align-middle link-primary header-link mr-2" href="/tags/">Tags</a>
-                    </li>
-                </ul>
-            </div>
+            {% include nav.html %}
 
             <div class="container mx-auto px-2 mb-2 clearfix header-text">
                 <h1 class="h0 col-12 sm-width-full py-4 mt-3 inline-block" itemprop="name headline">{{ page.title }}
