--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@
             {% include nav.html %}
 
             <div class="container mx-auto px-2 mb-2 clearfix header-text">
-                <h1 class="h0 inline-block col-9 sm-width-full py-4 mt-3 header-title">{{ site.title }}</h1>
+                <h1 class="h0 inline-block col-12 sm-width-full py-4 mt-3 header-title">{{ site.title }}</h1>
 
                 <div class="clearfix mb-4 py-1">
                     <div class="col-6 sm-width-full left border-top-thin">
@@ -27,7 +27,7 @@
                                 {% include dot-accent.html %}
                             </div>
                         </div>
-                        <p class="h4 col-9 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
+                        <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.description }}</p>
                     </div>
                 </div>
 
