--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,7 +69,7 @@
             "name": "Arcane Reveries",
             "logo": {
                 "@type": "ImageObject",
-                "url": "{{ site.url }}/favicon.png"
+                "url": "{{ site.url }}{{ site.baseurl }}/favicon.png"
               }
        },
       "author": {
