--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,4 +86,4 @@
 
 
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-<script src="{{ site.url }}/assets/prism.js" type="text/javascript"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/prism.js" type="text/javascript"></script>
