--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,19 +2,19 @@
     <ul class="list-reset left py-1 header-text font-smoothing">
         <li class="inline-block"></li>
         <li class="inline-block">
-            <a class="align-middle link-primary header-link mr-2" href="/">Home</a>
+            <a class="align-middle link-primary header-link mr-2" href="/blog/">Posts</a>
         </li>
-        <li class="inline-block">
+        <!-- <li class="inline-block">
             <a class="align-middle link-primary header-link mr-2" href="/about/">About</a>
+        </li> -->
+        <li class="inline-block">
+            <a class="align-middle link-primary header-link mr-2" href="/blog/work/">Work</a>
         </li>
         <li class="inline-block">
-            <a class="align-middle link-primary header-link mr-2" href="/work/">Work</a>
+            <a class="align-middle link-primary header-link mr-2" href="/">Resume</a>
         </li>
-        <li class="inline-block">
-            <a class="align-middle link-primary header-link mr-2" href="/resume/">Resume</a>
-        </li>
-        <li class="inline-block">
+        <!-- <li class="inline-block">
             <a class="align-middle link-primary header-link mr-2" href="/tags/">Tags</a>
-        </li>
+        </li> -->
     </ul>
 </div>
